--- a/books/templates/search_form.html
+++ b/books/templates/search_form.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-    <title>Search</title>
+    <title>Contact us</title>
 </head>
 <body>
+    <h1>Contact us</h1>
+
     {% if errors %}
         <ul>
             {% for error in errors %}
@@ -10,9 +12,12 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <form action="/search/" method="get">
-        <input type="text" name="q">
-        <input type="submit" value="Search">
+
+    <form action="/contact/" method="post">
+        <p>Subject: <input type="text" name="subject" value="{{ subject }}"></p>
+        <p>Your e-mail (optional): <input type="text" name="email" value="{{ email }}"></p>
+        <p>Message: <textarea name="message" rows="10" cols="50">**{{ message }}**</textarea></p>
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
